[package]
name = "ssh-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
backtrace = "0.3.73"
clap = "4.5.7"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.16"
rand = "0.8.5"
openssl = "0.10.66"
sha2 = "0.10.8"
rust-argon2 = "2.1.0"
rpassword = "7.3.1"
hmac = "0.12.1"
zeroize = "1.8.1"
