[package]
name = "ssh-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
backtrace = "0.3.73"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0.1"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.16"
rand = "0.8.5"
openssl = "0.10.66"
sha2 = "0.10.8"
rust-argon2 = "2.1.0"
rpassword = "7.3.1"
hmac = "0.12.1"
zeroize = "1.8.1"
hex = "0.4.3"
uuid = { version = "1.0", features = ["v4"] }
russh = "0.45.0"
russh-keys = "0.45.0"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.81"
tokio-fd = "0.3.0"